--- a/zed_wrapper/params/zed2i.yaml
+++ b/zed_wrapper/params/zed2i.yaml
@@ -6,14 +6,14 @@ general:
     camera_model:               'zed2i'
 
 depth:
-    min_depth:                  0.3             # Min: 0.2, Max: 3.0 - Default 0.7 - Note: reducing this value wil require more computational power and GPU memory
-    max_depth:                  5.0             # Max: 40.0
-
+    min_depth:                  0.4             # Min: 0.2, Max: 3.0 - Default 0.7 - Note: reducing this value wil require more computational power and GPU memory
+    max_depth:                  2.0             # Max: 40.0
+    quality:                    3
 pos_tracking:
     imu_fusion:                 true            # enable/disable IMU fusion. When set to false, only the optical odometry will be used.
 
 sensors:
-    sensors_timestamp_sync:     false           # Synchronize Sensors messages timestamp with latest received frame
+    sensors_timestamp_sync:     true           # Synchronize Sensors messages timestamp with latest received frame
     max_pub_rate:               200.            # max frequency of publishing of sensors data. MAX: 400. - MIN: grab rate
     publish_imu_tf:             true            # publish `IMU -> <cam_name>_left_camera_frame` TF
 
@@ -21,7 +21,7 @@ object_detection:
     od_enabled:                 false           # True to enable Object Detection [not available for ZED]
     model:                      0               # '0': MULTI_CLASS_BOX - '1': MULTI_CLASS_BOX_ACCURATE - '2': HUMAN_BODY_FAST - '3': HUMAN_BODY_ACCURATE - '4': MULTI_CLASS_BOX_MEDIUM - '5': HUMAN_BODY_MEDIUM - '6': PERSON_HEAD_BOX
     confidence_threshold:       50              # Minimum value of the detection confidence of an object [0,100]
-    max_range:                  15.             # Maximum detection range
+    max_range:                  3.             # Maximum detection range
     object_tracking_enabled:    true            # Enable/disable the tracking of the detected objects
     body_fitting:               false           # Enable/disable body fitting for 'HUMAN_BODY_X' models
     mc_people:                  true            # Enable/disable the detection of persons for 'MULTI_CLASS_BOX_X' models
